# integration

./: .gitignore  README.md
symbolification/: .gitignore
symbolification/mylib/: CMakeLists.txt  mylib.cpp  mylib.hpp
symbolification/mylib/cmake/Modules/: split_debug_symbols.cmake
symbolification/mylib/cmake/framework/: Info.plist
symbolification/yourapp/: CMakeLists.txt  plist.in  yourapp.cpp
